cluster/demo/ns-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-a
  labels:
    istio-injection: enabled
