cluster/demo/ns-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-b
  labels:
    istio-injection: "enabled"
