cluster/demo/app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: ns-b
  labels:
    app: app-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: app-b-sa
      containers:
        - name: app
          image: cgr.dev/chainguard/curl:latest
          imagePullPolicy: Always
          command: ["sh","-c"]
          args:
            - |
              while true; do sleep 3600; done
